--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
-
+<!-- this is useless -->
   <title>storage_cloud</title>
   <link rel="manifest" href="manifest.json">
 </head>
